# FreeCiv-Agents

./: README.md  pyproject.toml
blog/: 14-11-2025-initial-architecture.md
source/supervised/: create-data.py
