[tool.poetry]
name = "FreeCiv-Agents"
version = "0.1.0"
description = ""
authors = ["nickrusso <nick.s.russo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ray = "^2.51.1"
civrealm = "^0.1.2"
h5py = "^3.15.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^24.10.0"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = [
"E501",
"E203",
"W503",
]
max-line-length = 127

[tool.black]
line-length = 127
target-version = ["py312"]
include = '.pyi?$'
extend-exclude = '''
/(
.eggs
| .git
| .hg
| .mypy_cache
| .tox
| .venv
| _build
| buck-out
| build
| dist
)/
'''